[package]
name = "swiftide-examples"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
swiftide = { path = "../swiftide/", features = [
  "all",
  "scraping",
  "aws-bedrock",
  "groq",
  "ollama",
  "fluvio",
  "lancedb",
  "pgvector",
  "swiftide-agents",
  "dashscope",
  "mcp",
] }
swiftide-macros = { path = "../swiftide-macros" }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
spider = { workspace = true }
fluvio = { workspace = true }
temp-dir = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
swiftide-test-utils = { path = "../swiftide-test-utils" }
tracing = { workspace = true }
serde = { workspace = true }
rmcp = { workspace = true, features = ["transport-child-process", "client"] }


[[example]]
doc-scrape-examples = true
name = "index-codebase"
path = "index_codebase.rs"

[[example]]
name = "index-codebase-reduced-context"
path = "index_codebase_reduced_context.rs"

[[example]]
doc-scrape-examples = true
name = "fastembed"
path = "fastembed.rs"

[[example]]
doc-scrape-examples = true
name = "index-redis"
path = "index_into_redis.rs"

[[example]]
doc-scrape-examples = true
name = "index-markdown-metadata"
path = "index_markdown_lots_of_metadata.rs"

[[example]]
doc-scrape-examples = true
name = "scraping-index"
path = "scraping_index_to_markdown.rs"

[[example]]
doc-scrape-examples = true
name = "aws-bedrock"
path = "aws_bedrock.rs"

[[example]]
doc-scrape-examples = true
name = "store-multiple-vectors"
path = "store_multiple_vectors.rs"

[[example]]
name = "index-groq"
path = "index_groq.rs"

[[example]]
name = "index-ollama"
path = "index_ollama.rs"

[[example]]
name = "query-pipeline"
path = "query_pipeline.rs"

[[example]]
name = "hybrid-search"
path = "hybrid_search.rs"

[[example]]
name = "fluvio"
path = "fluvio.rs"

[[example]]
name = "lancedb"
path = "lancedb.rs"

[[example]]
name = "hello-agents"
path = "hello_agents.rs"

[[example]]
name = "index-md-pgvector"
path = "index_md_into_pgvector.rs"

[[example]]
name = "dashscope"
path = "dashscope.rs"

[[example]]
name = "reranking"
path = "reranking.rs"

[[example]]
name = "agents-mcp"
path = "agents_mcp_tools.rs"

[[example]]
name = "agents-resume"
path = "agents_resume.rs"
