[package]
name = "indexing"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
ignore = "0.4.22"
code_ops = { path = "../code_ops" }
infrastructure = { path = "../infrastructure" }
qdrant-client = { version = "1.9.0" }
async-stream = "0.3.5"
async-openai = { workspace = true }
futures-util = "0.3.30"
# futures-util = { workspace = true }
redis = { version = "0.25.4", features = [
  "aio",
  "tokio-comp",
  "connection-manager",
  "tokio-rustls-comp",
] }
text-splitter = { version = "0.13.1", features = ["markdown"] }

chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
itertools = { workspace = true }
indoc = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
