[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-openai = { workspace = true }
async-trait = { workspace = true }
qdrant-client = { version = "1.9.0" }
dotenvy = "0.15.7"

tracing = { workspace = true }


[dev-dependencies]

[features]
default = []
