[package]
name = "swiftide-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
swiftide-core = { path = "../swiftide-core", version = "0.22" }
anyhow.workspace = true
async-trait.workspace = true
dyn-clone.workspace = true
derive_builder.workspace = true
indoc.workspace = true
tracing.workspace = true
tokio.workspace = true
# pretty_assertions.workspace = true
strum.workspace = true
strum_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
fs-err = { workspace = true, features = ["tokio"] }
mcp-core = { workspace = true }
mcp-client = { workspace = true }
mcp-spec = { workspace = true }
tower-service = { workspace = true }

[dev-dependencies]
swiftide-core = { path = "../swiftide-core", features = ["test-utils"] }
mockall.workspace = true
test-log.workspace = true
temp-dir.workspace = true
insta.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
mcp = []
