[package]
name = "swiftide-core"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
async-trait = { workspace = true }
pin-project-lite = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
mockall = { workspace = true, optional = true }
lazy_static = { workspace = true }
derive_builder = { workspace = true }

tera = { version = "1.20", default-features = false }
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
test-case = { workspace = true }

[features]
test-utils = ["dep:mockall"]

[lints]
workspace = true
