[package]
name = "swiftide-indexing"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
swiftide-core = { path = "../swiftide-core", version = "0.25" }
swiftide-macros = { path = "../swiftide-macros", version = "0.25" }

anyhow = { workspace = true }
async-trait = { workspace = true }
derive_builder = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
num_cpus = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
indoc = { workspace = true }

ignore = { workspace = true }
text-splitter = { workspace = true, features = ["markdown"] }
fs-err.workspace = true

[dev-dependencies]
swiftide-core = { path = "../swiftide-core", features = ["test-utils"] }
test-log = { workspace = true }
mockall = { workspace = true }
insta = { workspace = true }
test-case = { workspace = true }
temp-dir = { workspace = true }

[features]
# TODO: Should not depend on integrations, transformers that use them should be in integrations instead and re-exported from root for convencience
tree-sitter = []

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]
